@@ -23,6 +23,7 @@ import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
@@ -89,7 +90,7 @@ public class RdsDataPoints {
          * preferred JETTY library; the reason is that JETTY does not allow sending the
          * square brackets characters "[]" verbatim over HTTP connections
          */
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         HttpsURLConnection https = (HttpsURLConnection) url.openConnection();
 
         https.setRequestMethod(HTTP_GET);
@@ -133,7 +134,7 @@ public class RdsDataPoints {
          * preferred JETTY library; the reason is that JETTY does not allow sending the
          * square brackets characters "[]" verbatim over HTTP connections
          */
-        URL url = new URL(pointUrl);
+        URL url = URI.create(pointUrl).toURL();
 
         HttpsURLConnection https = (HttpsURLConnection) url.openConnection();
 
